# harbor

./: .ctx.tasks.md  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  deny.toml  flake.nix  manifest.md  package-lock.json  package.json  run-alice.bat  run-bob.bat  temp_config.toml  vite.config.ts  vitest.config.ts
.bako/: diff.md  manifest-2616011200.md  manifest-2616011358.md
.dev/: config.linux.toml  config.toml  config.windows.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
bootstrap-node/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
bootstrap-node/src/: main.rs
infrastructure/: README.md  community-relay-cloudformation.yaml  libp2p-relay-cloudformation.yaml  relay-cloudformation.yaml
infrastructure/scripts/: attach-eip.sh  deploy-stack.sh  get-relay-address.sh  teardown-stack.sh  update-relay.sh
mock-peer/: Cargo.toml  README.md
mock-peer/src/: main.rs  protocols.rs
public/: relay-test.html
public/harbor-sound Project/: harbor-sound.als
relay-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
relay-server/src/: board_service.rs  db.rs  main.rs
scripts/: build-local-relay.sh  build-relay.ps1  build-relay.sh  generate-signing-keys.md  run-alice.bat  run-bob-dev.bat  run-bob.bat  run-bob.ps1  setup-dev.bat  setup-dev.ps1  setup-dev.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  harbor-relay-cloudformation.yaml  tauri.bob.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  logging.rs
src-tauri/src/commands/: accounts.rs  boards.rs  bootstrap.rs  calling.rs  comments.rs  contacts.rs  content_sync.rs  feed.rs  files.rs  identity.rs  likes.rs  link_preview.rs  logging.rs  media.rs  messaging.rs  mod.rs  network.rs  permissions.rs  posts.rs  rss.rs  wall_sync.rs
src-tauri/src/db/: connection.rs  mod.rs  sql_utils.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_schema_fixes.sql  003_lamport_sync_cursor.sql  004_messages_nonce.sql  005_bootstrap_nodes.sql  005_post_likes.sql  006_bootstrap_nodes.sql  007_passphrase_hint.sql  008_boards.sql  009_comments.sql  010_message_edit.sql  011_posts_lamport_index.sql
src-tauri/src/db/repositories/: boards_repo.rs  bootstrap_repo.rs  comments_repo.rs  contacts_repo.rs  identity_repo.rs  likes_repo.rs  messages_repo.rs  mod.rs  permissions_repo.rs  posts_repo.rs
src-tauri/src/models/: identity.rs
src-tauri/src/p2p/: behaviour.rs  config.rs  mod.rs  network.rs  swarm.rs  types.rs
src-tauri/src/p2p/protocols/: board_sync.rs  content_sync.rs  identity_exchange.rs  media_sync.rs  messaging.rs  mod.rs
src-tauri/src/services/: accounts_service.rs  board_service.rs  calling_service.rs  contacts_service.rs  content_sync_service.rs  crypto_service.rs  feed_service.rs  identity_service.rs  media_service.rs  messaging_service.rs  mod.rs  permissions_service.rs  posts_service.rs  signing.rs
src/components/common/: Button.test.tsx  Button.tsx  CustomizationPanel.tsx  EmojiPicker.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Input.test.tsx  Input.tsx  KeyboardShortcutsModal.tsx  LinkPreviewCard.tsx  PostMedia.tsx  index.ts
src/components/icons/: index.tsx
src/components/layout/: MainLayout.tsx
src/components/onboarding/: AccountSelection.tsx  CreateIdentity.tsx  UnlockIdentity.tsx  index.ts
src/constants/: cloudformation-template.ts
src/hooks/: index.ts  useKeyboardNavigation.test.ts  useKeyboardNavigation.ts  useTauriEvents.ts
src/pages/: Boards.tsx  Chat.tsx  Feed.tsx  Network.tsx  Settings.tsx  Wall.tsx  index.ts
src/pages/settings/: AboutSection.tsx  AppearanceSection.tsx  NetworkSection.tsx  NotificationsSection.tsx  PrivacySection.tsx  ProfileSection.tsx  SecuritySection.tsx  UpdatesSection.tsx  index.ts  shared.tsx
src/services/: accounts.test.ts  accounts.ts  audioNotifications.ts  boards.test.ts  boards.ts  calling.ts  comments.test.ts  comments.ts  contacts.test.ts  contacts.ts  feed.test.ts  feed.ts  identity.test.ts  identity.ts  index.ts  logging.test.ts  logging.ts  media.ts  messaging.test.ts  messaging.ts  network.test.ts  network.ts  permissions.test.ts  permissions.ts  posts.test.ts  posts.ts  updater.ts
src/stores/: accounts.test.ts  accounts.ts  boards.test.ts  boards.ts  contacts.test.ts  contacts.ts  feed.test.ts  feed.ts  identity.test.ts  identity.ts  index.ts  messaging.test.ts  messaging.ts  mockPeers.ts  network.test.ts  network.ts  settings.test.ts  settings.ts  wall.test.ts  wall.ts
src/styles/: design-system.css
src/test/: setup.ts
src/types/: accounts.ts  boards.ts  calling.ts  contacts.ts  identity.ts  index.ts  messaging.ts  network.ts  permissions.ts  posts.ts
src/utils/: errorHandler.test.ts  errorHandler.ts  errors.test.ts  errors.ts  formatting.ts  globalErrorHandler.ts  logger.ts  urlDetection.test.ts  urlDetection.ts
