[package]
name = "harbor-bootstrap-node"
version = "0.1.0"
edition = "2021"
description = "Bootstrap/rendezvous node for Harbor P2P network"

[[bin]]
name = "harbor-bootstrap"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# libp2p with features needed for bootstrap node
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "kad",
    "identify",
    "ping",
    "relay",
    "autonat",
    "macros",
] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
