[package]
name = "harbor-mock-peer"
version = "0.2.0"
edition = "2021"
description = "Mock peer server for testing Harbor P2P connectivity"

[[bin]]
name = "mock-peer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# libp2p with same features as Harbor
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "mdns",
    "identify",
    "ping",
    "request-response",
    "cbor",
    "macros",
    "serde",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"
