[package]
name = "harbor-relay-server"
version = "0.2.0"
edition = "2021"
description = "libp2p relay server for Harbor chat app - enables NAT traversal"

[[bin]]
name = "harbor-relay"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# libp2p with relay server support
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "relay",
    "identify",
    "ping",
    "request-response",
    "cbor",
    "macros",
    "serde",
] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
