[package]
name = "chat-app"
version = "0.1.0"
description = "A decentralized P2P chat application"
authors = ["you"]
edition = "2021"

[lib]
name = "chat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"  # CBOR for canonical serialization

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
hex = "0.4"

# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "kad",
    "mdns",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "autonat",
    "request-response",
    "cbor",
    "macros",
    "serde",
] }
multiaddr = "0.18"
void = "1"
